--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
       </div>
-      <p>(c) 2025 - All rights reserved</p>
+      <p>&copy; 2025 - All rights reserved</p>
     </footer>
   </body>
 </html>
