--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
       href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-light.css"
     />
     <title>Astronautas</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="Astronautas" />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
