--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
     />
     <title>Astronautas</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="./favicon.ico" />
     <link
       rel="icon"
       type="image/png"
@@ -67,19 +66,21 @@
       sizes="96x96"
     />
     <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="./favicon/apple-touch-icon.png"
     />
-    <meta name="apple-mobile-web-app-title" content="Astronautas" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
     <link rel="manifest" href="./favicon/site.webmanifest" />
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
-      <img src="./img/clay.webp" alt="Clay" />
-      <nav>
+    <header class="container">
+      <img class="logo" src="./img/clay.webp" alt="Clay" />
+      <nav class="main-nav">
         <a href="#">About</a>
         <a href="#">Portfolio</a>
         <a href="#">Job</a>
@@ -87,31 +88,31 @@
       </nav>
     </header>
 
-    <main>
-      <div>
-        <p>404</p>
+    <main class="container">
+      <div class="left-column">
+        <p class="main-title">404</p>
         <p>Lost in space</p>
         <div></div>
         <p>
           You have reached the edge of the universe. The page you requested
           could not be found. Don't wory and return to the previous page.
         </p>
-        <div>
-          <a href="#">Go Home</a>
-          <a href="#">Back</a>
+        <div class="btn-group">
+          <a class="btn" href="#">Go Home</a>
+          <a class="btn btn-white" href="#">Back</a>
         </div>
       </div>
       <img src="./img/astronautas.gif" alt="Astronautas" ; loading="lazy" />
     </main>
 
-    <footer>
+    <footer class="container">
       <div>
         <a href="#"><i class="fa-brands fa-facebook"></i></a>
         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
       </div>
-      <p>&copy; 2025 - All rights reserved</p>
+      <p class="copyright">&copy; 2025 - All rights reserved</p>
     </footer>
   </body>
 </html>
